# RP2040-AWS-v1

examples/: CMakeLists.txt
examples/AWS_IoT_HTTP/: AWS_IoT_HTTP.c  CMakeLists.txt  README.md
examples/AWS_IoT_MQTT/: AWS_IoT_MQTT.c  CMakeLists.txt
